services/pathia_data_api/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pathia
  labels:
    app.kubernetes.io/part-of: pathia-data-api
    name: pathia
